src/objects/AP_Process_Form__c.object
<CustomObject>
    <fields>
        <fullName>CargoLink_Phone_Number__c</fullName>
        <label>CargoLink Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>AP Process Forms</relationshipLabel>
        <relationshipName>AP_Process_Forms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Clave_Bancaria_Unificada_CBU__c</fullName>
        <inlineHelpText>The CBU, usually referred to as the Bank Code, consists of 22 digits and is mandatory for Argentinian Airline settlements.</inlineHelpText>
        <label>Clave Bancaria Unificada - CBU</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colombia_City_percentage__c</fullName>
        <label>Colombia City percentage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colombia_City_selection__c</fullName>
        <label>Colombia City selection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colombia_Type_of_Contributor__c</fullName>
        <label>Colombia - Type of Contributor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gran contribuyente autorretenedor</fullName>
                </value>
                <value>
                    <fullName>Gran contribuyente</fullName>
                </value>
                <value>
                    <fullName>Regimen comun autorretenedor</fullName>
                </value>
                <value>
                    <fullName>Regimen comun</fullName>
                </value>
                <value>
                    <fullName>Regimen simplificado</fullName>
                </value>
                <value>
                    <fullName>Regimen Especial</fullName>
                </value>
                <value>
                    <fullName>Asignación de NIT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commission_Rate__c</fullName>
        <label>Commission Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Company_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company country used in SIS recordtypes</description>
        <label>Company Country</label>
        <referenceTo>IATA_ISO_Country__c</referenceTo>
        <relationshipLabel>AP Process Forms</relationshipLabel>
        <relationshipName>AP_Process_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Email__c</fullName>
        <description>Email field for company information required in some joining forms</description>
        <label>Company Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Company_Registration_ID__c</fullName>
        <description>Used for SIS Recordtypes</description>
        <label>Company Registration ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Registration_number__c</fullName>
        <label>Company Registration number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_State__c</fullName>
        <description>Company state used in SIS recordtypes</description>
        <label>Company State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Trade_Name__c</fullName>
        <description>Company Trade Name for SIS Recordtypes</description>
        <label>Company Trade Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_address__c</fullName>
        <description>Company address used in SIS Recordtypes</description>
        <label>Company address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_city__c</fullName>
        <description>Company city used in SIS recordtypes</description>
        <label>Company city</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <description>SIS joining, ISUA, Contact Person info field</description>
        <label>Email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <description>SIS joining, ISUA, Contact Person info field</description>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <description>SIS joining, ISUA, Contact Person info field</description>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Resp_Email__c</fullName>
        <description>Contact person responsible for this BSP application</description>
        <label>Contact Resp Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Resp_F_Name__c</fullName>
        <description>Contact person responsible for this BSP application</description>
        <label>Contact  Resp F. Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Resp_Job_Title__c</fullName>
        <label>Contact Resp Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Resp_L_Name__c</fullName>
        <description>Contact person responsible for this BSP application</description>
        <label>Contact Resp L. Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Resp_Phone__c</fullName>
        <description>Phone number including country code</description>
        <inlineHelpText>Phone number including country code</inlineHelpText>
        <label>Contact Resp Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Resp_Salutation__c</fullName>
        <label>Contact Resp Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr</fullName>
                </value>
                <value>
                    <fullName>Mrs</fullName>
                </value>
                <value>
                    <fullName>Ms</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <description>SIS joining, ISUA, Contact Person info field</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_number__c</fullName>
        <description>SIS joining, ISUA, Contact Person info field</description>
        <label>Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Cyprus_Turkey_based_Airline__c</fullName>
        <label>Cyprus Turkey based Airline</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Exporter_Name__c</fullName>
        <description>Used for SIS Recordtypes</description>
        <inlineHelpText>The &apos;Data Export&apos; means the controller who transfers the personal data</inlineHelpText>
        <label>Data Exporter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Exporter_Signatory_Name__c</fullName>
        <description>Used for SIS Recordtypes</description>
        <label>Data Exporter Signatory Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Exporter_Signatory_Position__c</fullName>
        <description>Used for SIS Recordtypes</description>
        <label>Data Exporter Signatory Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Exporting_Organization_Address__c</fullName>
        <description>Used for SIS Recordtypes</description>
        <label>Data Exporting Organization Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Exporting_Organization_Email__c</fullName>
        <description>Used for SIS Recordtypes</description>
        <label>Data Exporting Organization Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Data_Exporting_Organization_Fax__c</fullName>
        <description>Used for SIS Recordtypes</description>
        <label>Data Exporting Organization Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Data_Exporting_Organization_Name__c</fullName>
        <description>Used for SIS Recordtypes</description>
        <label>Data Exporting Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Exporting_Organization_Phone__c</fullName>
        <description>Used for SIS Recordtypes</description>
        <label>Data Exporting Organization Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Default_Commission_Rate__c</fullName>
        <description>Used as default value for commission control in a specific BSP market for the airline applying</description>
        <label>Default Commission Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Desired_commencment_date__c</fullName>
        <label>Desired commencement date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desired_date_to_start_in_ICH__c</fullName>
        <description>Desired date to start in ICH</description>
        <label>Desired date to start in ICH</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desired_date_to_start_in_SIS__c</fullName>
        <description>Desired date to start in SIS</description>
        <label>Desired date to start in SIS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Digital_Signature_application__c</fullName>
        <description>Used for SIS recordtypes</description>
        <label>Digital Signature application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Digital_Signature_verification__c</fullName>
        <description>Used for SIS recordtypes</description>
        <label>Digital Signature verification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diners_Merchant_Number__c</fullName>
        <label>Diners Merchant Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diners_Name_of_Acquirer__c</fullName>
        <label>Diners Name of Acquirer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_have_an_iiNET_account__c</fullName>
        <description>Used for SIS Recordtypes</description>
        <label>Do you have an iiNET account?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_want_to_add_Bank_Details__c</fullName>
        <description>Used for SIS recordtypes</description>
        <label>Do you want to add Bank Details?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>No, use form 1</fullName>
                </value>
                <value>
                    <fullName>No, use form 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Download_Guide_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This filed allows to control how many time the guide was downloaded from a specific form</description>
        <label>Download Guide Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ETSP_Contact_Address__c</fullName>
        <label>ETSP Contact Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ETSP_Contact_Email__c</fullName>
        <label>ETSP Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ETSP_Contact_F_Name__c</fullName>
        <label>ETSP Contact F Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETSP_Contact_Fax__c</fullName>
        <label>ETSP Contact Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ETSP_Contact_Job_Title__c</fullName>
        <label>ETSP Contact Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETSP_Contact_L_Name__c</fullName>
        <label>ETSP Contact L Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETSP_Contact_Phone__c</fullName>
        <label>ETSP Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ETSP_Contact_Salutation__c</fullName>
        <label>ETSP Contact Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr</fullName>
                </value>
                <value>
                    <fullName>Mrs</fullName>
                </value>
                <value>
                    <fullName>Ms</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ETSP_Contractor_Name__c</fullName>
        <label>ETSP Contractor Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APG</fullName>
                </value>
                <value>
                    <fullName>TAL Aviation Ltd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EU_Data_Privacy_Laws__c</fullName>
        <description>Used for SIS Recordtypes

2 options:
A. EU Standard Contractual Clauses for processing between IATA and Participant (including the EU Standard Contractual Clauses for processing between IATA and Sub-processor. A signed copy is available upon request).

B. (for use only in jurisdictions where a tripartite agreement is required): EU Standard Contractual Clauses for processing between IATA, Participant and Sub-processor</description>
        <label>EU Data Privacy Laws</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ecuador_Legal_Forms_requirements__c</fullName>
        <label>Ecuador Legal Forms requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fin_Adm_Contact_Address__c</fullName>
        <description>Physical Address (To appear on the billing reports)</description>
        <label>Fin./Adm. Contact Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fin_Adm_Contact_City__c</fullName>
        <label>Fin./Adm. Contact City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fin_Adm_Contact_Country__c</fullName>
        <label>Fin./Adm. Contact Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>France</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fin_Adm_Contact_Email__c</fullName>
        <description>E-mail address</description>
        <label>Fin./Adm. Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fin_Adm_Contact_F_Name__c</fullName>
        <description>Finance / Administration   Contact Person &amp; Title</description>
        <label>Fin./Adm. Contact F. Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fin_Adm_Contact_Job_Title__c</fullName>
        <description>Finance / Administration   Contact Person &amp; Title</description>
        <label>Fin./Adm. Contact Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fin_Adm_Contact_L_Name__c</fullName>
        <description>Finance / Administration   Contact Person &amp; Title</description>
        <label>Fin./Adm. Contact L. Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fin_Adm_Contact_Phone__c</fullName>
        <description>Telephone Number (with country code)</description>
        <label>Fin./Adm. Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fin_Adm_Contact_Zip_Code__c</fullName>
        <description>Physical Address (To appear on the billing reports)</description>
        <label>Fin./Adm. Contact Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fin_Adm_Contact__c</fullName>
        <description>Finance / Administration   Contact Person &amp; Title</description>
        <label>Fin./Adm. Contact Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr</fullName>
                </value>
                <value>
                    <fullName>Mme</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flights_operated_in_the_BSP_country__c</fullName>
        <description>Please indicate the flights the airline operates in the BSP concerned of application</description>
        <label>Flights operated in the BSP/CASS country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form_of_payment_in_HOT_files__c</fullName>
        <description>Used in ISSP_APCases to create new cases for EasyPay when the form of payment is HOT.
This field identifies the type of HOT payment</description>
        <label>Form of payment in HOT files</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>EP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GSSA_Address_Formula__c</fullName>
        <formula>if(LEN(Case__r.Account.BillingStreet)&gt;0, Case__r.Account.BillingStreet&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(Case__r.Account.BillingCity)&gt;0, Case__r.Account.BillingCity&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(Case__r.Account.BillingPostalCode)&gt;0, Case__r.Account.BillingPostalCode&amp; &quot; &quot; , &quot;&quot; )&amp; BR() &amp;
if(LEN(Case__r.Account.BillingState)&gt;0, Case__r.Account.BillingState,&quot;&quot;) &amp;
If(LEN(Case__r.Account.BillingCountry) &gt;0, Case__r.Account.BillingCountry,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GSSA Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSSA_Address__c</fullName>
        <label>GSSA Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GSSA_Code__c</fullName>
        <label>GSSA Code</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSSA_Contact_Email__c</fullName>
        <label>GSSA Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GSSA_Contact_FAX__c</fullName>
        <label>GSSA Contact FAX</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GSSA_Contact_F_Name__c</fullName>
        <label>GSSA Contact F Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSSA_Contact_JobTitle__c</fullName>
        <label>GSSA Contact JobTitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSSA_Contact_L_Name__c</fullName>
        <label>GSSA Contact L Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSSA_Contact_Phone__c</fullName>
        <label>GSSA Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GSSA_Contact_Salutation__c</fullName>
        <label>GSSA_Contact_Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr</fullName>
                </value>
                <value>
                    <fullName>Mrs</fullName>
                </value>
                <value>
                    <fullName>Ms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GSSA_HQ_Address__c</fullName>
        <description>Address of the Headquarter Office of the GSSA</description>
        <inlineHelpText>Address of the Headquarter Office of the GSSA</inlineHelpText>
        <label>HQ Address of GSSA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSSA_HQ_City__c</fullName>
        <description>City of the Headquarters Office of the GSSA</description>
        <inlineHelpText>City of the Headquarters Office of the GSSA</inlineHelpText>
        <label>HQ Office City of GSSA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSSA_HQ_Country__c</fullName>
        <description>Country of the Headquarters Office of the GSSA</description>
        <inlineHelpText>Country of the Headquarters Office of the GSSA</inlineHelpText>
        <label>HQ Office Country of GSSA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSSA_HQ_Post_Code__c</fullName>
        <description>Postal Code of the Headquarters Office of the GSSA</description>
        <inlineHelpText>Postal Code of the Headquarters Office of the GSSA</inlineHelpText>
        <label>HQ Office Post Code of GSSA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSSA_HQ_State__c</fullName>
        <description>State of the Headquarters Office of the GSSA</description>
        <inlineHelpText>State of the Headquarters Office of the GSSA</inlineHelpText>
        <label>HQ Office State of GSSA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSSA_Legal_Name_Formula__c</fullName>
        <formula>Case__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GSSA Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSSA_Legal_Name__c</fullName>
        <label>GSSA Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSSA_VAT_Id__c</fullName>
        <description>VAT Id of the GSSA</description>
        <label>GSSA VAT Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOT_File_Recipient_Email_1__c</fullName>
        <label>HOT File Recipient Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HOT_File_Recipient_Email_2__c</fullName>
        <label>HOT File Recipient Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HOT_File_Recipient_Email_3__c</fullName>
        <label>HOT File Recipient Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HOT_File_Recipient_Remove_Email_1__c</fullName>
        <description>HOT File recipient requested to be removed</description>
        <label>HOT File Recipient Remove Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HOT_File_Recipient_Remove_Email_2__c</fullName>
        <description>HOT File recipient requested to be removed</description>
        <label>HOT File Recipient Remove Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HOT_File_Recipient_Remove_Email_3__c</fullName>
        <description>HOT File recipient requested to be removed</description>
        <label>HOT File Recipient Remove Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Hot_files_delivery_format__c</fullName>
        <description>Delivery format</description>
        <label>Hot files delivery format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>iiNET</fullName>
                </value>
                <value>
                    <fullName>BSPLink</fullName>
                </value>
                <value>
                    <fullName>ASD (applicable for China)</fullName>
                </value>
                <value>
                    <fullName>Download only</fullName>
                </value>
                <value>
                    <fullName>E-mail and Download</fullName>
                </value>
                <value>
                    <fullName>SFTP Interface</fullName>
                </value>
                <value>
                    <fullName>Not required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IATA_EasyPay_Effective_Date__c</fullName>
        <description>Effective date for airline request to opt-out / in of IATA EasyPay.</description>
        <label>IATA EasyPay Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IATA_EasyPay_Opt_In_Opt_Out__c</fullName>
        <description>Airline&apos;s selection on CS Portal (BSP Change) to either Opt-In or Opt-Out of IATA EasyPay.</description>
        <label>IATA EasyPay Opt-In / Opt-Out</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IN</fullName>
                    <label>Opt-In</label>
                </value>
                <value>
                    <fullName>OUT</fullName>
                    <label>Opt-Out</label>
                </value>
                <value>
                    <fullName>HOT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ICH_Currency_of_Clearance__c</fullName>
        <label>ICH Currency of Clearance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <label>GBP Currency of Clearance (Zone A)</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>USD Currency of Clearance (Zone B)</label>
                </value>
                <value>
                    <fullName>D</fullName>
                    <label>EUR Currency of Clearance (Zone D)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ICH_Currency_of_Settlement__c</fullName>
        <description>Currency of Settlement for ICH Joining Forms. It can be: GBP, USD, EUR, or a combination</description>
        <label>ICH Currency of Settlement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GBP</fullName>
                    <label>Entirely in GBP</label>
                </value>
                <value>
                    <fullName>USD</fullName>
                    <label>Entirely in USD</label>
                </value>
                <value>
                    <fullName>GBP-USD</fullName>
                    <label>In GBP with respect to balance with other Zone A members and in USD with respect to all other zones</label>
                </value>
                <value>
                    <fullName>EUR</fullName>
                    <label>Entirely in EUR</label>
                </value>
                <value>
                    <fullName>EUR-USD</fullName>
                    <label>In EUR and USD</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IINET_account_number__c</fullName>
        <description>What BSPlink access level does your Airline require?</description>
        <inlineHelpText>Value must be  2 alpha 2 numeric</inlineHelpText>
        <label>IINET account number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_AA_Member__c</fullName>
        <description>Used for SIS recordtypes</description>
        <inlineHelpText>Change this help text</inlineHelpText>
        <label>Is your company an A&amp;A Member?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_company_subject_to_EU_laws__c</fullName>
        <description>Used for SIS recordtypes</description>
        <label>Is company subject to EU laws?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_publicly_traded_company__c</fullName>
        <description>Is your company a publicly traded company?</description>
        <label>Is publicly traded company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_your_company_joining_the_Clearing_Hou__c</fullName>
        <description>Used for SIS recordtypes</description>
        <label>Is your company joining the Clearing Hou</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>